# atlaspack

./: .compiledcssrc  .eslintignore  .flowconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .mocharc.js  .mocharc.json  .npmrc  .prettierignore  .prettierrc  .yarnrc  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  README.md  atlaspack-content-key-not-found-root-cause-analysis-and-reproduction.md  atlaspack-graph-already-has-content-key-integration-test-reproduction-report.md  atlassian-frontend-monorepo  build-file-cfe.sh  build-file.sh  build.bash  bundler-rust-rewrite-research.md  codegen.js  compare-compiled-output.js  compiled  demand_driven_symbol_resolution_design.md  deps.dot  gulpfile.js  input.dot  lerna.json  native-bundler-parity-tracker.md  nx.json  package.json  package.json.orig  rovodev.mjs  (+14 more)
benchmarks/atlaspack_benchmark/: .gitignore  Cargo.toml  README.md
benchmarks/atlaspack_benchmark/example/: .parcelrc  index.html  package.json
benchmarks/atlaspack_benchmark/example/app-root/: tsconfig.json
benchmarks/atlaspack_benchmark/scripts/: benchmark.mjs
benchmarks/atlaspack_benchmark/src/: lib.rs  main.rs
crates/apvm/: Cargo.toml  README.md
crates/apvm/src/: context.rs  env.rs  main.rs  paths.rs  resolver.rs  validator.rs  versions.rs
crates/apvm/src/cmd/: atlaspack.rs  debug.rs  default.rs  info.rs  install.rs  install_git.rs  install_local.rs  install_npm.rs  install_release.rs  (+11 more)
crates/atlaspack/: Cargo.toml  worker-cpu-profile-1755496497533.cpuprofile
crates/atlaspack/src/: atlaspack.rs  atlaspack_build.rs  cache.rs  cache_stats.rs  compilation.rs  database.rs  database_reader.rs  error.rs  lib.rs  main.rs  parcel.rs  plugins.rs  project_root.rs  requests.rs  state.rs  test_utils.rs  watch.rs
crates/atlaspack_atlaskit_tokens/: Cargo.toml
crates/atlaspack_atlaskit_tokens/src/: lib.rs
crates/atlaspack_bundling/: Cargo.toml
crates/atlaspack_bundling/benches/: bundling_benchmark.rs
crates/atlaspack_bundling/src/: lib.rs
crates/atlaspack_cache/: Cargo.toml
crates/atlaspack_cache/src/: cache.rs
crates/atlaspack_compiled_css_in_js_transformer/: Cargo.toml
crates/atlaspack_compiled_css_in_js_transformer/src/: display_name.rs  emit.rs  evaluate_expr.rs  imports.rs  keyframes.rs  lib.rs  shorthand.rs  styled.rs  template.rs  utils.rs
crates/atlaspack_conditional_imports/: Cargo.toml
crates/atlaspack_conditional_imports/src/: lib.rs
crates/atlaspack_conditional_imports_swc_plugin/: Cargo.toml
crates/atlaspack_conditional_imports_swc_plugin/src/: lib.rs
crates/atlaspack_config/: Cargo.toml
crates/atlaspack_config/src/: atlaspack_config.rs  atlaspack_config_fixtures.rs  atlaspack_rc.rs  atlaspack_rc_config_loader.rs  builtin_configs.rs  lib.rs  parcel_config.rs  parcel_rc.rs  partial_atlaspack_config.rs
crates/atlaspack_contextual_imports/: Cargo.toml
crates/atlaspack_contextual_imports/src/: lib.rs
crates/atlaspack_contextual_imports_swc_plugin/: Cargo.toml
crates/atlaspack_contextual_imports_swc_plugin/src/: lib.rs
crates/atlaspack_core/: Cargo.toml  build.rs
crates/atlaspack_core/src/: asset_graph.rs  build_progress.rs  bundle_graph.rs  cache.rs  config_loader.rs  database.rs  database_reader.rs  debug_tools.rs  error.rs  hash.rs  lib.rs  macros.rs  package_result.rs  plugin.rs  project_path.rs  result.rs  serde.rs  static_resolver.rs  types.rs  version.rs
crates/atlaspack_dev_dep_resolver/: Cargo.toml
crates/atlaspack_dev_dep_resolver/src/: lib.rs  main.rs
crates/atlaspack_dev_server/: Cargo.toml  README.md
crates/atlaspack_dev_server/src/: lib.rs  main.rs
crates/atlaspack_filesystem/: Cargo.toml
crates/atlaspack_filesystem/examples/: vcs_file_diff.rs
crates/atlaspack_filesystem/src/: file_system.rs  in_memory_file_system.rs  lib.rs  os_file_system.rs  search.rs
crates/atlaspack_memoization_cache/: Cargo.toml
crates/atlaspack_memoization_cache/benches/: cache_cleanup.rs
crates/atlaspack_memoization_cache/src/: cache.rs  lib.rs  lmdb_cache_reader_writer.rs
crates/atlaspack_monitoring/: Cargo.toml  README.md
crates/atlaspack_monitoring/examples/: sample_usage.rs
crates/atlaspack_monitoring/src/: crash_reporter.rs  lib.rs  sentry_integration.rs  tracer.rs
crates/atlaspack_napi_helpers/: Cargo.toml
crates/atlaspack_napi_helpers/src/: anyhow.rs  call_method.rs  console_log.rs  define_method.rs  get_function.rs  js_arc.rs  js_resolvable.rs  js_result.rs  lib.rs  napi_result.rs  transferable.rs  zero_copy_buffer.rs
crates/atlaspack_package_manager/: Cargo.toml
crates/atlaspack_package_manager/src/: node_package_manager.rs  package_manager.rs
crates/atlaspack_packager_css/: Cargo.toml
crates/atlaspack_packager_css/src/: css_packager.rs  lib.rs  url_replacer.rs
crates/atlaspack_packager_js/: Cargo.toml  build.rs
crates/atlaspack_packager_js/prelude/: .gitignore  package.json  rolldown.config.ts  tsconfig.json
crates/atlaspack_packager_js/src/: assemble.rs  inline_requires.rs  js_packager.rs  lib.rs  process_asset.rs
crates/atlaspack_plugin_optimizer_inline_requires/: Cargo.toml
crates/atlaspack_plugin_optimizer_inline_requires/src/: inlining_visitor.rs  lib.rs
crates/atlaspack_plugin_resolver/: Cargo.toml
crates/atlaspack_plugin_resolver/src/: atlaspack_resolver.rs  parcel_resolver.rs
crates/atlaspack_plugin_resolver_oxc/: Cargo.toml
crates/atlaspack_plugin_resolver_oxc/src/: built_in.rs  lib.rs
crates/atlaspack_plugin_rpc/: Cargo.toml
crates/atlaspack_plugin_rpc/src/: javascript_plugin_api.rs  lib.rs  rpc_host.rs  testing.rs
crates/atlaspack_plugin_transformer_css/: Cargo.toml
crates/atlaspack_plugin_transformer_css/src/: css_transformer.rs  css_transformer_config.rs  lib.rs
crates/atlaspack_plugin_transformer_html/: Cargo.toml
crates/atlaspack_plugin_transformer_html/src/: attrs.rs  dom_visitor.rs  hmr_visitor.rs  html_dependencies_visitor.rs  html_transformer.rs  lib.rs
crates/atlaspack_plugin_transformer_image/: Cargo.toml
crates/atlaspack_plugin_transformer_image/src/: image_transformer.rs  lib.rs
(+2902 files in other folders)
