[workspace]
resolver = "2"
members = [
  "crates/*",
  "packages/transformers/js/core",
  "packages/utils/node-resolver-rs",
  "packages/utils/dev-dep-resolver"
]

[profile.canary]
inherits = "release"
debug = true

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1"
assert_fs = "1.1.1"
async-trait = "0.1"
bitflags = "2.5.0"
browserslist-rs = "0.16"
cfg-if = "1.0.0"
clap = "4.5"
crash-handler = "0.6.2"
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.6"
clippy = "0.0.302"
data-encoding = "2.3.2"
derive_builder = "0.20.0"
dunce = "1.0.1"
dyn-hash = "0.x"
es-module-lexer = { git = "https://github.com/devongovett/es-module-lexer" }
getrandom = { version = "0.2.15", default-features = false }
git2 = { version = "0.19", default-features = false }
glob = "0.3.1"
glob-match = "0.2.1"
heed = "0.20.3"
hex = "0.4"
html5ever = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
image = "0.25.2"
indexmap = "1.9.2"
indoc = "1.0.3"
is_elevated = "0.1.2"
itertools = "0.10.5"
jemallocator = "0.3.2"
json = "0.12.4"
json5 = "0.4.1"
lazy_static = "1.5"
libc = "0.2"
lightningcss = "1.0.0-alpha.59"
log = "0.4.21"
lz4_flex = "0.11.3"
markup5ever = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
mimalloc = { version = "0.1.25", default-features = false }
minidumper = "0.8.3"
mockall = "0.12.1"
mozjpeg-sys = "1.0.0"
napi = "2.16.4"
napi-build = "2"
napi-derive = "2.16.3"
nodejs-semver = "4.0.0"
nom = "7.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxipng = "8.0.0"
parcel_sourcemap = "2.1.1"
parking_lot = "0.12"
path-slash = "0.1.4"
pathdiff = "0.2.1"
percent-encoding = "2.2.0"
petgraph = "0.6.5"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
rkyv = "0.7.38"
sentry = { version = "0.32.2", default-features = false }
serde = "1"
serde-bool = "0.1.3"
serde-value = "0.7.0"
serde_bytes = "0.11.5"
serde_json = "1.0"
serde_json5 = "0.1.0"
serde_repr = "0.1.19"
serde_yaml = "0.9"
serde_yml = "0.0.12"
sha-1 = "0.10.0"
sourcemap = "*"
swc_core = "0.96"
swc_ecma_parser = "*"
swc_ecma_transforms_testing = "0.143.2"
thiserror = "1.0"
tinyvec = "1.8"
thread_local = "1.1.8"
tokio = "1"
toml = "0.8.12"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
url = "2.3.1"
url-search-params = "12.0.0"
whoami = "1.5.1"
xxhash-rust = "0.8.2"
