[workspace]
resolver = "2"
members = [
  "crates/*",
  "packages/transformers/js/core",
  "packages/utils/node-resolver-rs",
  "packages/utils/dev-dep-resolver",
]

[profile.canary]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0.95"
assert_fs = "1.1.2"
async-trait = "0.1.85"
bitflags = "2.6.0"
browserslist-rs = "0.17.0"
cfg-if = "1.0.0"
clap = "4.5.23"
clippy = "0.0.302"
crash-handler = "0.6.2"
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
data-encoding = "2.6.0"
derive_builder = "0.20.2"
dunce = "1.0.5"
dyn-hash = "0.2.0"
getrandom = { version = "0.2.15", default-features = false }
git2 = { version = "0.20.0", default-features = false }
glob = "0.3.2"
glob-match = "0.2.1"
heed = "0.21.0"
hex = "0.4.3"
html5ever = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
image = "0.25.5"
indexmap = "2.7.0"
indoc = "2.0.5"
Inflector = "0.11.4"
is_elevated = "0.1.2"
itertools = "0.14.0"
jemallocator = "0.5.4"
json = "0.12.4"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.169"
lightningcss = "1.0.0-alpha.59"
log = "0.4.22"
lz4_flex = "0.11.3"
mimalloc = { version = "0.1.43", default-features = false }
minidumper = "0.8.3"
mockall = "0.13.1"
mozjpeg-sys = "2.2.2"
napi = "2.16.13"
napi-build = "2.1.4"
napi-derive = "2.16.13"
nodejs-semver = "4.1.0"
nom = "7.1.3"
num_cpus = "1.16.0"
once_cell = "1.20.2"
oxipng = "9.1.3"
parking_lot = "0.12.3"
path-slash = "0.1.4"
pathdiff = "0.2.1"
percent-encoding = "2.3.1"
petgraph = "0.7.1"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
sentry = { version = "0.35.0", default-features = false }
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_json = "1.0.135"
serde_json5 = "0.1.0"
serde_repr = "0.1.19"
serde_yml = "0.0.12"
serde-bool = "0.1.3"
serde-value = "0.7.0"
sha-1 = "0.10.1"
sourcemap = "9.1.2"
swc_core = "10.0.0"
swc_ecma_parser = "6.0.1"
swc_ecma_transforms_testing = "7.0.0"
thiserror = "2.0.9"
thread_local = "1.1.8"
tinyvec = "1.8.1"
tokio = "1.42.0"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
url = "2.5.4"
url-search-params = "12.0.0"
whoami = "1.5.2"
xxhash-rust = "0.8.15"

# DEPRECATED
serde_yaml = "0.9.34+deprecated"

# CANNOT UPDATE
## rkyv includes a breaking change in a minor release which breaks parcel_sourcemap
parcel_sourcemap = "2.1.1"
rkyv = "0.7.38"

## Other
es-module-lexer = { git = "https://github.com/devongovett/es-module-lexer" }
markup5ever = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
