[package]
name = "apvm"
version = "0.0.1"
edition = "2021"
description = "Atlaspack Version Manager"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
flate2 = { workspace = true }
fs_extra = { workspace = true }
homedir = { workspace = true }
json = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
which = { workspace = true }
