[package]
name = "apvm"
version = "0.0.1"
edition = "2021"
description = "Atlaspack Version Manager"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
flate2 = { workspace = true }
homedir = { workspace = true }
jwalk = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tar = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
which = { workspace = true }
sha2 = { workspace = true }
sha-1 = { workspace = true }
