[package]
name = "atlaspack"
version = "0.1.0"
edition = { workspace = true }
description = "Atlaspack Bundler"

[lints]
workspace = true

[features]
nodejs = ["atlaspack_plugin_rpc/nodejs"]

[dependencies]
atlaspack_config = { path = "../atlaspack_config" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_bundling = { path = "../atlaspack_bundling" }
atlaspack_packager_js = { path = "../atlaspack_packager_js" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
atlaspack_memoization_cache = { path = "../atlaspack_memoization_cache" }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }
atlaspack_plugin_resolver = { path = "../atlaspack_plugin_resolver" }
atlaspack_plugin_transformer_html = { path = "../atlaspack_plugin_transformer_html" }
atlaspack_plugin_transformer_image = { path = "../atlaspack_plugin_transformer_image" }
atlaspack_plugin_transformer_inline = { path = "../atlaspack_plugin_transformer_inline" }
atlaspack_plugin_transformer_inline_string = { path = "../atlaspack_plugin_transformer_inline_string" }
atlaspack_plugin_transformer_js = { path = "../atlaspack_plugin_transformer_js" }
atlaspack_plugin_transformer_json = { path = "../atlaspack_plugin_transformer_json" }
atlaspack_plugin_transformer_raw = { path = "../atlaspack_plugin_transformer_raw" }
atlaspack_plugin_transformer_css = { path = "../atlaspack_plugin_transformer_css" }
atlaspack_plugin_transformer_yaml = { path = "../atlaspack_plugin_transformer_yaml" }
atlaspack_plugin_transformer_svg = { path = "../atlaspack_plugin_transformer_svg" }
atlaspack_plugin_transformer_tokens = { path = "../atlaspack_plugin_transformer_tokens" }
atlaspack_plugin_rpc = { path = "../atlaspack_plugin_rpc" }
atlaspack_sourcemap = { path = "../atlaspack_sourcemap" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
lmdb-js-lite = { path = "../lmdb-js-lite" }

anyhow = { workspace = true }
async-trait = { workspace = true }
dyn-hash = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
pathdiff = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-bool = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
