[package]
name = "atlaspack_bundling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
atlaspack_core = { path = "../atlaspack_core" }
fixedbitset = "0.5"
serde_json = { workspace = true }
petgraph = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
