[package]
name = "atlaspack_cache"
version = "0.1.0"
edition = { workspace = true }
description = "Caching infrastructure for Atlaspack"

[lints]
workspace = true

[features]
default = []

[dependencies]
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
atlaspack_shared_map = { path = "../atlaspack_shared_map" }

anyhow = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json5 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }