[package]
name = "atlaspack_conditional_imports"
version = "0.1.0"
authors = ["Jake Lane <me@jakelane.me>"]
edition = "2021"
description = "Atlaspack conditional imports transformation"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
swc_core = { version = "0.96", features = ["ecma_plugin_transform"] }
swc_ecma_transforms_testing = {version = "0.143.2"}
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
cargo-wasi = "0.1.28"
atlaspack_swc_transform_utils = { path = "../atlaspack_swc_transform_utils" }
