[package]
name = "atlaspack_config"
version = "0.1.0"
authors = [
  "Monica Olejniczak <monica.j.olejniczak@gmail.com>",
  "Devon Govett <devongovett@gmail.com>",
]
edition = "2021"

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }

derive_builder = { workspace = true }
glob-match = { workspace = true }
indexmap = { workspace = true, features = ["serde", "std"] }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json5 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
