[package]
name = "atlaspack_config"
version = "0.1.0"
authors = [
  "Monica Olejniczak <monica.j.olejniczak@gmail.com>",
  "Devon Govett <devongovett@gmail.com>",
]
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }

derive_builder = { workspace = true }
glob-match = { workspace = true }
indexmap = { workspace = true, features = ["serde", "std"] }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json5 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
atlaspack_test_fixtures = { path = "../atlaspack_test_fixtures" }
mockall = { workspace = true }
