[package]
name = "atlaspack_contextual_imports"
version = "0.1.0"
authors = ["Jake Lane <me@jakelane.me>"]
edition = "2021"
description = "Atlaspack contextual imports transformation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
swc_ecma_transforms_testing = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
atlaspack_swc_runner = { path = "../atlaspack_swc_runner" }
