[package]
name = "atlaspack_contextual_imports_swc_plugin"
version = "0.1.0"
authors = ["Jake Lane <me@jakelane.me>"]
edition = "2021"
description = "Atlaspack contextual imports plugin for SWC"

[lib]
crate-type = ["cdylib"]

[dependencies]
atlaspack_contextual_imports = { path = "../atlaspack_contextual_imports" }
swc_core = { version = "0.96", features = ["ecma_plugin_transform"] }
serde_json = "1.0.116"
