[package]
name = "atlaspack_contextual_imports_swc_plugin"
version = "0.1.0"
authors = ["Jake Lane <me@jakelane.me>"]
edition = { workspace = true }
description = "Atlaspack contextual imports plugin for SWC"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
atlaspack_contextual_imports = { path = "../atlaspack_contextual_imports" }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
swc_plugin_macro = { workspace = true }
serde_json = { workspace = true }
