[package]
name = "atlaspack_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the atlaspack bundler"

[features]
default = []

[dependencies]
atlaspack_sourcemap = { path = "../atlaspack_sourcemap" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
caniuse_database = { path = "../caniuse_database" }

anyhow = { workspace = true }
bitflags = { workspace = true }
browserslist-rs = { workspace = true }
derive_builder = { workspace = true }
dyn-hash = { workspace = true }
nodejs-semver = { workspace = true }
mockall = { workspace = true }
petgraph = { workspace = true, features = ["serde-1"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = { workspace = true }
serde-value = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
