[package]
name = "atlaspack_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the atlaspack bundler"

[features]
default = []

[dependencies]
atlaspack_sourcemap = { path = "../atlaspack_sourcemap" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
caniuse_database = { path = "../caniuse_database" }

thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
browserslist-rs = { workspace = true }
derive_builder = { workspace = true }
dyn-hash = { workspace = true }
nodejs-semver = { workspace = true }
mockall = { workspace = true }
petgraph = { workspace = true, features = ["serde-1"] }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = { workspace = true }
serde-value = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
tokio = { workspace = true, features = ["full"] }
