[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "atlaspack_dev_dep_resolver"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
es-module-lexer = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
glob = { workspace = true }
xxhash-rust = { workspace = true }
parking_lot = { workspace = true }
