[package]
name = "atlaspack_dev_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }

[lints]
workspace = true
