[package]
name = "atlaspack_dev_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlaspack_dev_server"
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"

[lints]
workspace = true
