[package]
name = "atlaspack_filesystem"
version = "0.1.0"
edition = "2021"
description = "FileSystem wrapper trait for use in Atlaspack codebase."

[dependencies]
anyhow = { workspace = true }
atlaspack_shared_map = { path = "../atlaspack_shared_map" }
mockall = { workspace = true }
thread_local = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
assert_fs = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
is_elevated = { workspace = true }
