[package]
authors = ["Matt jones<mattjones701@gmail.com>"]
name = "atlaspack_memoization_cache"
version = "0.1.0"
edition = { workspace = true }
description = "Persistent cache API for Atlaspack"

[dependencies]
anyhow = { workspace = true }
lmdb-js-lite = { path = "../lmdb-js-lite" }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pretty_assertions = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
