[package]
name = "atlaspack_monitoring"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Provides tracing, error and crash reporting system for atlaspack"

[features]
canary = ["sentry", "whoami", "rustls", "minidumper", "crash-handler"]

rustls = ["sentry/rustls"]
openssl = ["sentry/native-tls"]

[[example]]
name = "sample_usage"
required-features = ["canary"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-chrome = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

whoami = { workspace = true, optional = true }
sentry = { workspace = true, optional = true, features = ["anyhow", "backtrace", "contexts", "debug-images", "panic", "reqwest"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
crash-handler = { workspace = true, optional = true }
minidumper = { workspace = true, optional = true }

[dev-dependencies]
cfg-if = { workspace = true }
