[package]
name = "atlaspack_monitoring"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
version = "0.1.0"
edition = "2024"
description = "Provides tracing, error and crash reporting system for atlaspack"

[lints]
workspace = true

[features]
rustls = ["sentry/rustls"]
openssl = ["sentry/native-tls"]

[[example]]
name = "sample_usage"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-chrome = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sentry-tracing = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

whoami = { workspace = true }
sentry = { workspace = true }

[target.'cfg(not(target_env = "musl"))'.dependencies]
crash-handler = { workspace = true }
minidumper = { workspace = true }

[dev-dependencies]
cfg-if = { workspace = true }
