[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "atlaspack_napi_helpers"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
napi = { workspace = true, features = ["serde-json", "napi4", "napi5", "async"] }
once_cell = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
napi = { workspace = true, features = ["serde-json"] }

[dev-dependencies]
napi = { workspace = true, features = ["serde-json", "napi4", "napi5", "async", "noop"]}

[build-dependencies]
napi-build = { workspace = true }
