[package]
authors = ["Monica Olejniczak <monica.j.olejniczak@gmail.com>"]
name = "atlaspack_package_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
serde = { workspace = true, features = ["derive"] }
