[package]
authors = ["Monica Olejniczak <monica.j.olejniczak@gmail.com>"]
name = "atlaspack_package_manager"
version = "0.1.0"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_dev_dep_resolver = { path = "../atlaspack_dev_dep_resolver" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
