[package]
name = "atlaspack_packager_css"
version = "0.1.0"
edition = { workspace = true }
description = "CSS packager for the Atlaspack Bundler"

[lints]
workspace = true

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

[dependencies.lightningcss]
workspace = true
features = ["browserslist", "sourcemap"]

[dev-dependencies]
pretty_assertions = { workspace = true }
