[package]
name = "atlaspack_plugin_resolver"
version = "0.1.0"
edition = "2021"
description = "Resolver Plugin for the Atlaspack Bundler"

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
